JKNIG-1: Refactor tests to use Spring WebMvc Test framework