@@ -6,44 +6,36 @@ import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
-import org.springframework.http.MediaType;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
+import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.test.web.servlet.setup.MockMvcBuilders;
+
+import java.util.List;
 
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-import java.io.IOException;
-import java.util.Arrays;
-import java.util.List;
-
+@WebMvcTest(FilesController.class)
 class FilesControllerTest {
 
+    @Autowired
     private MockMvc mockMvc;
 
-    @Mock
+    @MockBean
     private FilesService filesService;
-
-    @InjectMocks
-    private FilesController filesController;
-
-    @BeforeEach
-    void setUp() {
-        MockitoAnnotations.openMocks(this);
-        mockMvc = MockMvcBuilders.standaloneSetup(filesController).build();
-    }
 
     @Test
     void shouldListFiles() throws Exception {
-        List<String> files = Arrays.asList("file1.txt", "file2.txt");
+        List<String> files = List.of("file1.txt", "file2.txt");
         when(filesService.listFiles()).thenReturn(files);
 
         mockMvc.perform(get("/api/files/listFiles"))
                 .andExpect(status().isOk())
-                .andExpect(content().contentType(MediaType.TEXT_PLAIN));
+                .andExpect(content().string("[file1.txt, file2.txt]"));
     }
 
     @Test
@@ -66,7 +58,6 @@ class FilesControllerTest {
         mockMvc.perform(get("/api/files/readFile")
                 .param("filePath", filepath))
                 .andExpect(status().isOk())
-                .andExpect(content().contentType(MediaType.TEXT_PLAIN))
                 .andExpect(content().string(fileContent));
     }
 
